# SyncAudio-LAN

./: .gitignore  generate-icons.ps1  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  config.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  playback.rs  volume.rs
src-tauri/src/network/: mod.rs  receiver.rs  sender.rs
