[package]
name = "sync-audio-lan"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri                  = { version = "2.1", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2.2"
tokio                  = { version = "1.40", features = ["full"] }
cpal                   = "0.15"
serde                  = { version = "1.0", features = ["derive"] }
serde_json             = "1.0"
anyhow                 = "1.0"
log                    = "0.4"
env_logger             = "0.11"
ringbuf                = "0.3"
parking_lot            = "0.12"
bytemuck               = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
